--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<module>de.bund.bfr.knime.fsklab.metadata.model.tests</module>
 		<module>de.bund.bfr.knime.fsklab.deprecatednodes.tests</module>
 		<module>de.bund.bfr.knime.fsklab.nodes.tests</module>
+		<module>de.bund.bfr.knime.fsklab.nodes.common.tests</module>
 		<module>de.bund.bfr.knime.pmm.common.tests</module>
 		<module>de.bund.bfr.knime.pmm.nodes.tests</module>
 
