the legacy feature is redundant but it will prevent update issues
updating ICPMF to this version requires a legacy feature. It doesn't
actually matter if it is installed or not, but without it, the KNIME
updater gets confused

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -18,6 +18,7 @@
         <module>de.bund.bfr.knime.r.x64.feature</module>
         <module>de.bund.bfr.knime.r.x86.feature</module>
         <module>de.bund.bfr.knime.foodprocess.feature</module>
+        <module>de.bund.bfr.knime.fsklab.legacy.feature</module>
     </modules>
 </project>
 
