--- a/de.bund.bfr.knime.js/plugin.xml
+++ b/de.bund.bfr.knime.js/plugin.xml
@@ -68,6 +68,18 @@
 
 	   <importResource relativePath="js-lib/bfr/fskutil_1.0.0.js" type="JAVASCRIPT"></importResource>
      </webResourceBundle>
+     
+     <webResourceBundle name="App utilities" version="1.0.0" webResourceBundleID="app_1.0.0"
+	   debug="true" exports="app" usesDefine="false">
+
+	   <webResource
+	     relativePathSource="js-lib/bfr/fskapp/"
+		 relativePathTarget="js-lib/bfr/fskapp/">
+	   </webResource>
+
+	   <importResource relativePath="js-lib/bfr/fskapp/app_1.0.0.js" type="JAVASCRIPT"></importResource>
+	   <importResource relativePath="js-lib/bfr/fskapp/css/styles.css" type="CSS"></importResource>
+     </webResourceBundle>
    </extension>
    
 </plugin>
