included jhdf library in nodes

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -13,6 +13,7 @@ bin.includes = META-INF/,\
                sedml_libs/xom-1.2.5.jar,\
                libs/batik-svg-dom.jar,\
                libs/batik-util-1.7.jar,\
-               js-src/
+               js-src/,\
+               libs/jhdf-0.5.11.jar
 source.. = src/
            output.. = bin/
