added HDFHandler classes

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -14,6 +14,8 @@ bin.includes = META-INF/,\
                libs/batik-svg-dom.jar,\
                libs/batik-util-1.7.jar,\
                js-src/,\
-               libs/jhdf-0.5.11.jar
+               libs/jhdf-0.5.11.jar,\
+               data/loadHDF.r,\
+               data/loadHDF.py
 source.. = src/
            output.. = bin/
