--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -15,7 +15,8 @@ bin.includes = META-INF/,\
                libs/batik-util-1.7.jar,\
                js-src/,\
                libs/jhdf-0.5.11.jar,\
-               data/loadHDF.r,\
-               data/loadHDF.py
+               data/convertToJsonSerializable.py,\
+               data/loadJsonIntoPython.py,\
+               data/loadJsonIntoR.r
 source.. = src/
            output.. = bin/
