--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -147,6 +147,7 @@
        <webDependency webResourceBundleID="bootstrap3_typeahead_4.0.2"></webDependency>
        <webDependency webResourceBundleID="RequireJS_2.3.3"></webDependency>
        <webDependency webResourceBundleID="knimeserviceConditionalLoad_1.0"></webDependency>
+       <webDependency webResourceBundleID="knimeLazyLoadingService_1.0"></webDependency>
        
        <!--webDependency webResourceBundleID="FskMetadata_1.0.0"></webDependency>
        <webDependency webResourceBundleID="FskUtil_1.0.0"></webDependency-->
