--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ deploy:
 - provider: script
   skip_cleanup: true # to upload artifacts created during the build
   script: bash bintray.sh
-  on: test_version_2.0
+  on: test
 - provider: script
   skip_cleanup: true
   script: bash bintray_development.sh
