--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -14,6 +14,7 @@ bin.includes = META-INF/,\
                libs/batik-svg-dom.jar,\
                libs/batik-util-1.7.jar,\
                js-src/,\
-               data/convertToJsonSerializable.py
+               data/convertToJsonSerializable.py,\
+               libs/vocabularies-2.0.0.jar
 source.. = src/
            output.. = bin/
