--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -138,6 +138,7 @@
          relativePathSource="js-src/de/bund/bfr/knime/fsklab/v1.9/editor"
          relativePathTarget="js-src/de/bund/bfr/knime/fsklab/v1.9/editor" />
        <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/v1.9/editor/editor.js" type="JAVASCRIPT" />
+       <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/v1.9/editor/lazyload.js" type="JAVASCRIPT" />
        <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/v1.9/editor/editor.css" type="CSS" />
 
        <webDependency webResourceBundleID="codemirror_5.49.2"></webDependency>
@@ -147,6 +148,7 @@
        <webDependency webResourceBundleID="bootstrap3_typeahead_4.0.2"></webDependency>
        <webDependency webResourceBundleID="RequireJS_2.3.3"></webDependency>
        <webDependency webResourceBundleID="knimeserviceConditionalLoad_1.0"></webDependency>
+       <webDependency webResourceBundleID="knimeLazyLoadingService_1.0"></webDependency>
        
        <!--webDependency webResourceBundleID="FskMetadata_1.0.0"></webDependency>
        <webDependency webResourceBundleID="FskUtil_1.0.0"></webDependency-->
