--- a/de.bund.bfr.knime.fsklab.service/build.properties
+++ b/de.bund.bfr.knime.fsklab.service/build.properties
@@ -2,5 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               vocabularies-2.0.0.jar,\
-               spark-core-2.9.1.jar
+               spark-core-2.9.1.jar,\
+               vocabularies-2.0.1.jar
