--- a/.travis.yml
+++ b/.travis.yml
@@ -36,11 +36,9 @@ deploy:
   script: bash gitlab.sh
   on:
     branch: release
-
-# TODO: nightly build
-# - provider: script
-#   skip_cleanup: true # to upload artifacts created during the build
-#   script: bash bintray_nightly.sh
-#   on: 
-#     branch: master
-#     condition: $TRAVIS_EVENT_TYPE = cron
+- provider: script
+  skip_cleanup: true # to upload artifacts created during the build
+  script: bash gitlab_nightly.sh
+  on: 
+    branch: development
+    condition: $TRAVIS_EVENT_TYPE = cron
