enable auto-open image in Runner

--- a/de.bund.bfr.knime.fsklab.nodes.common/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes.common/build.properties
@@ -3,4 +3,6 @@ source.. = src/,\
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               libs/bfr-swing-1.0-SNAPSHOT.jar
+               libs/bfr-swing-1.0-SNAPSHOT.jar,\
+               libs/batik-all-1_6.jar,\
+               libs/xerces-2.9.0.jar
