--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,11 @@ deploy:
     branch: release
 - provider: script
   skip_cleanup: true # to upload artifacts created during the build
+  script: bash gitlab_development.sh
+  on:
+    branch: development
+- provider: script
+  skip_cleanup: true # to upload artifacts created during the build
   script: bash gitlab_nightly.sh
   on: 
     branch: development
