--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - development
-
+  pull_request:
+    branches:
+      - development
 jobs:
   build:
     runs-on: ubuntu-latest
