--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
       - development
-  pull_request:
-    branches:
-      - development
+  release:
+    types: [created]
 jobs:
   build:
     runs-on: ubuntu-latest
