Migrate FSK, PMM and FPL to KNIME 4.4
- Target platform file for 4.4
- Updated deps to 4.4
- Fix in PMM for Java 11 issues (MyDBTree). Please test.
- Added Javax dep in metadata model from KNIME plugin
- Update Tycho dependency to 1.3.0 to support Java 11
- Configure apache-maven-compiler to require Java 11

--- a/de.bund.bfr.knime.fsklab.deprecatednodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.deprecatednodes/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" path="src-prerakip"/>
 	<classpathentry kind="src" path="src-1_7_2"/>
 	<classpathentry kind="src" path="src-1_9_0"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="libs/bfr-swing-1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="libs/fskml-1.0.12.jar"/>
@@ -14,5 +13,6 @@
 	<classpathentry kind="lib" path="sedml_libs/jlibsedml-2.2.3.jar"/>
 	<classpathentry kind="lib" path="sedml_libs/jmathml-2.2.1.jar"/>
 	<classpathentry kind="lib" path="sedml_libs/xom-1.2.5.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
