--- a/pom.xml
+++ b/pom.xml
@@ -10,17 +10,12 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<tycho.version>1.0.0</tycho.version>
+		<tycho.version>1.3.0</tycho.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<eclipse-repo.url>http://download.eclipse.org/releases/oxygen</eclipse-repo.url>
 		<tycho.testArgLine></tycho.testArgLine>
 		<jacoco-version>0.7.8</jacoco-version>
 	</properties>
-
-	<!-- <repositories> <repository> <id>knime-37</id> <url>https://update.knime.org/analytics-platform/3.7</url> 
-		<layout>p2</layout> </repository> <repository> <id>knime-testflows</id> <url>https://3d-e-chem.github.io/updates</url> 
-		<layout>p2</layout> </repository> <repository> <id>RBundles</id> <url>https://dl.bintray.com/silebat/RBundles</url> 
-		<layout>p2</layout> </repository> </repositories> -->
 
 	<modules>
 		<!-- Plugins -->
@@ -98,6 +93,17 @@
 
 	<build>
 		<plugins>
+		
+			<!-- Compile for Java 11 -->
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-compiler-plugin</artifactId>
+	            <version>3.8.0</version>
+	            <configuration>
+	                <release>11</release>
+	            </configuration>
+        	</plugin>
+        	
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
