--- a/features/pom.xml
+++ b/features/pom.xml
@@ -19,6 +19,7 @@
         <module>de.bund.bfr.knime.r.x64.feature</module>
         <module>de.bund.bfr.knime.r.x86.feature</module>
         <module>de.bund.bfr.knime.foodprocess.feature</module>
+        <module>Test_feature</module>
     </modules>
 </project>
 
