--- a/de.bund.bfr.knime.foodprocess.pcml/.classpath
+++ b/de.bund.bfr.knime.foodprocess.pcml/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/xmlbeans-pcml-1-0.jar" sourcepath="lib/src"/>
+	<classpathentry exported="true" kind="lib" path="lib/xmlbeans-pcml-1-0.jar" sourcepath="/Users/ahmadswaid/git/FSK-Lab/de.bund.bfr.knime.foodprocess.pcml/lib/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
