--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<properties>
 		<tycho.version>1.3.0</tycho.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<eclipse-repo.url>http://download.eclipse.org/releases/oxygen</eclipse-repo.url>
+		<eclipse-repo.url>http://download.eclipse.org/releases/latest</eclipse-repo.url>
 		<tycho.testArgLine></tycho.testArgLine>
 		<jacoco-version>0.7.8</jacoco-version>
 	</properties>
@@ -41,7 +41,7 @@
 		<module>de.bund.bfr.knime.foodprocess.view</module>
 
 		<!-- Test plugins and fragments -->
-		<!-- <module>de.bund.bfr.knime.testflows</module> -->
+		<module>de.bund.bfr.knime.testflows</module>
 		<module>de.bund.bfr.knime.foodprocess.tests</module>
 		<module>de.bund.bfr.knime.fsklab.metadata.model.tests</module>
 		<module>de.bund.bfr.knime.fsklab.deprecatednodes.tests</module>
@@ -89,27 +89,41 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>macosx</id>
+			<activation>
+				<os>
+					<name>mac os x</name>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<tycho.test.jvmArgs>-XstartOnFirstThread</tycho.test.jvmArgs>
+			</properties>
+			<build>
+			</build>
+		</profile>
 	</profiles>
 
 	<build>
 		<plugins>
-		
 			<!-- Compile for Java 11 -->
-	        <plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-compiler-plugin</artifactId>
-	            <version>3.8.0</version>
-	            <configuration>
-	                <release>11</release>
-	            </configuration>
-        	</plugin>
-        	
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+				<configuration>
+					<release>11</release>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
 				<version>${tycho.version}</version>
 				<extensions>true</extensions>
 			</plugin>
+
 			<!--Enable the replacement of the SNAPSHOT version in the final product 
 				configuration -->
 			<plugin>
