--- a/de.bund.bfr.knime.testflows/pom.xml
+++ b/de.bund.bfr.knime.testflows/pom.xml
@@ -17,7 +17,7 @@
 				<version>${tycho.version}</version>
 				<configuration>
 					<argLine>${tycho.testArgLine}</argLine>
-					<useUIHarness>true</useUIHarness>
+					<useUIHarness>${tycho.testUI}</useUIHarness>
 					<useUIThread>false</useUIThread>
 				</configuration>
 			</plugin>
