--- a/de.bund.bfr.knime.testflows/pom.xml
+++ b/de.bund.bfr.knime.testflows/pom.xml
@@ -22,13 +22,13 @@
 				<tycho.testArgLine>-XstartOnFirstThread</tycho.testArgLine>
 				<tycho.testUI>true</tycho.testUI>
 			</properties>
-			<build>
-			</build>
 		</profile>
 		<profile>
 			<id>testui</id>
 			<activation>
-				<activeByDefault>false</activeByDefault>
+				<os>
+                	<name>!Linux</name>
+				</os>
 			</activation>
 			<build>
 				<plugins>
@@ -62,6 +62,28 @@
 								</extraRequirements>
 							</dependency-resolution>
 						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>NOUITEST</id>
+			<activation>
+				<os>
+					<family>unix</family> 
+                	<name>Linux</name>
+				</os>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>tycho-surefire-plugin</artifactId>
+						<version>${tycho.version}</version>
+						<configuration>
+			                <!-- Disable integration tests on Linux -->
+			                <skip>true</skip>
+            			</configuration>
 					</plugin>
 				</plugins>
 			</build>
