--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="pmfml-0.0.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jhdf-0.5.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/batik-svg-dom.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/batik-util-1.7.jar"/>
