--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -15,6 +15,7 @@ bin.includes = META-INF/,\
                libs/batik-util-1.7.jar,\
                js-src/,\
                data/convertToJsonSerializable.py,\
-               libs/vocabularies-2.0.0.jar
+               libs/vocabularies-2.0.0.jar,\
+               pmfml-0.0.12.jar
 source.. = src/
            output.. = bin/
