prepare branch for future maintenance
pushes to this branch trigger the deployment to development branch of
gitlab.bfr.berlin.
update site:
https://gitlab.bfr.berlin/silebat/development/raw/4.4/fsklab

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Java CI
 on: 
   push:
     branches:
-      - development
+      - knime_4_4
   pull_request:
     branches:
-      - development
+      - knime_4_4
 jobs:
   build:
     runs-on: ubuntu-latest
