--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Java CI
 on: 
   push:
     branches:
-      - development
+      - knime_4_5
   pull_request:
     branches:
-      - development
+      - knime_4_5
 jobs:
   build:
     runs-on: ubuntu-latest
