--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="libs/jhdf-0.5.11.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/batik-svg-dom.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/batik-util-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/freemarker-2.3.23.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="libs/jhdf-0.5.11.jar"/>
+	<classpathentry kind="lib" path="libs/batik-svg-dom.jar"/>
+	<classpathentry kind="lib" path="libs/batik-util-1.7.jar"/>
+	<classpathentry kind="lib" path="libs/freemarker-2.3.23.jar"/>
 	<classpathentry kind="lib" path="libs/bfr-swing-1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="sedml_libs/jaxen-1.1.6.jar"/>
 	<classpathentry kind="lib" path="sedml_libs/jdom-1.1.3.jar"/>
@@ -12,9 +13,8 @@
 	<classpathentry kind="lib" path="sedml_libs/jmathml-2.2.1.jar"/>
 	<classpathentry kind="lib" path="sedml_libs/xom-1.2.5.jar"/>
 	<classpathentry kind="lib" path="libs/vocabularies-2.0.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="libs/fskml-1.0.13.jar" sourcepath="libs/fskml-1.0.13-sources.jar"/>
+	<classpathentry kind="lib" path="libs/fskml-1.0.13.jar" sourcepath="libs/fskml-1.0.13-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
