--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -3,7 +3,7 @@ name: Java CI
 on: 
   push:
     branches:
-      - release_patch_160821
+      - release_deployment_4.0
   release:
     types: [created]
 jobs:
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 8
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '8'
+          java-version: '11'
           distribution: 'adopt'
       - name: Cache Maven packages
         uses: actions/cache@v2
