fix switching model category in JS

--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-module-jsonschema-2.2.1.jar"/>
 	<classpathentry kind="lib" path="libs/jhdf-0.5.11.jar"/>
 	<classpathentry kind="lib" path="libs/batik-svg-dom.jar"/>
 	<classpathentry kind="lib" path="libs/batik-util-1.7.jar"/>
