--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<tycho.version>1.3.0</tycho.version>
+		<tycho.version>1.7.0</tycho.version>
+		<tycho.extras.version>${tycho.version}</tycho.extras.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<eclipse-repo.url>http://download.eclipse.org/releases/latest</eclipse-repo.url>
 		<tycho.testArgLine></tycho.testArgLine>
@@ -20,6 +21,7 @@
 
 	<modules>
 		<!-- Plugins -->
+		
 		<module>de.bund.bfr.knime.js</module>
 		
 		<module>de.bund.bfr.knime.fsklab.metadata.model</module>
@@ -31,10 +33,12 @@
 		<module>de.bund.bfr.knime.fsklab.service</module>
 		<module>de.bund.bfr.knime.internal.nodes</module>
 		<module>de.bund.bfr.knime.nodes.util</module>
-		<module>de.bund.bfr.knime.pmm.bfrdbiface.lib</module>
-		<module>de.bund.bfr.knime.pmm.common</module>
-		<module>de.bund.bfr.knime.pmm.nodes</module>
 		<module>org.hsh.bfr.db</module>
+		<module>de.bund.bfr.knime.pmm.common</module>
+		<module>de.bund.bfr.knime.pmm.bfrdbiface.lib</module>
+		
+		<module>de.bund.bfr.knime.pmm.nodes</module>
+		
 
 		<module>de.bund.bfr.knime.foodprocess</module>
 		<module>de.bund.bfr.knime.foodprocess.pcml</module>
@@ -43,14 +47,15 @@
 
 		<!-- Test plugins and fragments -->
 		<module>de.bund.bfr.knime.testflows</module>
-		<module>de.bund.bfr.knime.foodprocess.tests</module>
+		<!--module>de.bund.bfr.knime.foodprocess.tests</module>
+		<module>de.bund.bfr.knime.pmm.common.tests</module>
+		<module>de.bund.bfr.knime.pmm.nodes.tests</module-->
+
 		<module>de.bund.bfr.knime.fsklab.metadata.model.tests</module>
 		<module>de.bund.bfr.knime.fsklab.deprecatednodes.tests</module>
 		<module>de.bund.bfr.knime.fsklab.nodes.tests</module>
 		<module>de.bund.bfr.knime.fsklab.nodes.common.tests</module>
-		<module>de.bund.bfr.knime.pmm.common.tests</module>
-		<module>de.bund.bfr.knime.pmm.nodes.tests</module>
-
+		
 		<!-- Test report -->
 		<module>de.bund.bfr.knime.testreport</module>
 
@@ -92,48 +97,133 @@
 		</profile>
 	</profiles>
 
+	
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-maven-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<extensions>true</extensions>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-packaging-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>target-platform-configuration</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-repository-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-director-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-surefire-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<configuration>
+						<trimStackTrace>false</trimStackTrace>
+						<includes>
+							<include>%regex[.*]</include>
+						</includes>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho.extras</groupId>
+					<artifactId>tycho-buildtimestamp-jgit</artifactId>
+					<version>${tycho.extras.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho.extras</groupId>
+					<artifactId>tycho-eclipserun-plugin</artifactId>
+					<version>${tycho.extras.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho.extras</groupId>
+					<artifactId>tycho-p2-extras-plugin</artifactId>
+					<version>${tycho.extras.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho.extras</groupId>
+					<artifactId>tycho-source-feature-plugin</artifactId>
+					<version>${tycho.extras.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-source-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho.extras</groupId>
+					<artifactId>tycho-dependency-tools-plugin</artifactId>
+					<version>1.7.0</version>
+					<executions>
+						<execution>
+							<id>list-dependencies</id>
+							<goals>
+								<goal>list-dependencies</goal>
+							</goals>
+							<phase>compile</phase>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 		<plugins>
-			<!-- Compile for Java 11 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<release>11</release>
-				</configuration>
-			</plugin>
 
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho.version}</version>
 				<extensions>true</extensions>
 			</plugin>
-
-			<!--Enable the replacement of the SNAPSHOT version in the final product 
-				configuration -->
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-packaging-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<id>package-feature</id>
-						<configuration>
-							<finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
-						</configuration>
-					</execution>
-				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.eclipse.tycho.extras</groupId>
+						<artifactId>tycho-buildtimestamp-jgit</artifactId>
+						<version>${tycho.extras.version}</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<timestampProvider>jgit</timestampProvider>
+					<format>'v'yyyyMMddHHmm</format>
+					<jgit.ignore>
+						pom.xml
+						.polyglot.build.properties
+					</jgit.ignore>
+					<jgit.dirtyWorkingTree>warning</jgit.dirtyWorkingTree>
+				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-repository-plugin</artifactId>
+				<configuration>
+					<skipArchive>true</skipArchive>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
-				<version>${tycho.version}</version>
 				<configuration>
-					<target>
+				<target>
 						<artifact>
 							<groupId>de.bund.bfr.knime</groupId>
 							<artifactId>target-platform</artifactId>
@@ -141,6 +231,7 @@
 						</artifact>
 					</target>
 					<environments>
+						<!-- These can be removed once we shut down the Buckminster build -->
 						<environment>
 							<os>linux</os>
 							<ws>gtk</ws>
@@ -158,6 +249,35 @@
 						</environment>
 					</environments>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>plugin-source</id>
+						<goals>
+							<goal>plugin-source</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- The following is required if source bundles are to be included -->
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<executions>
+					<execution>
+						<id>attach-p2-metadata</id>
+						<phase>package</phase>
+						<goals>
+							<goal>p2-metadata</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
