upgrade foodprocess, foodprocesssviews and pmm common to use Tycho 2.7.3

--- a/de.bund.bfr.knime.foodprocess.view/build.properties
+++ b/de.bund.bfr.knime.foodprocess.view/build.properties
@@ -2,4 +2,7 @@ javacDefaultEncoding.. = UTF-8
 source.view.jar = src/
 bin.includes = plugin.xml,\
                META-INF/,\
-               view.jar
+               view.jar,\
+               lib/jfreechart-1.0.13.jar,\
+               .
+source.. = src/
