--- a/de.bund.bfr.knime.foodprocess/build.properties
+++ b/de.bund.bfr.knime.foodprocess/build.properties
@@ -1,8 +1,9 @@
 javacDefaultEncoding.. = UTF-8
-source.foodprocess.jar = src/
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
-               foodprocess.jar,\
+               .,\
                lib/jcm1.0-config.jar,\
                lib/jcommon-1.0.16.jar,\
                lib/jfreechart-1.0.13.jar,\
