--- a/de.bund.bfr.knime.pmm.nodes/.classpath
+++ b/de.bund.bfr.knime.pmm.nodes/.classpath
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="nashorn.jar"/>
 	<classpathentry kind="lib" path="bfr-swing-1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="fskml-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
