removed legacy, internal and 32bit R features from bundle

--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,9 @@
 
 		<!-- Test plugins and fragments -->
 		<module>de.bund.bfr.knime.testflows</module>
-		<!--module>de.bund.bfr.knime.foodprocess.tests</module>
+		<module>de.bund.bfr.knime.foodprocess.tests</module>
 		<module>de.bund.bfr.knime.pmm.common.tests</module>
-		<module>de.bund.bfr.knime.pmm.nodes.tests</module-->
+		<module>de.bund.bfr.knime.pmm.nodes.tests</module>
 
 		<module>de.bund.bfr.knime.fsklab.metadata.model.tests</module>
 		<module>de.bund.bfr.knime.fsklab.deprecatednodes.tests</module>
